Updated Build configuration

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec babel-node server.js",
-    "build": "babel server.js --out-file server.compiled.js"
+    "build": "babel server.js --out-file build/server.js"
   },
   "author": "",
   "license": "ISC",
