--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -1,3 +1,3 @@
 option_settings:
   aws:elasticbeanstalk:container:nodejs:
-    NodeCommand: "node server.compiled.js"
+    NodeCommand: "node build/server.js"
