--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
       - npm install
   build:
     commands:
-      - npm build
+      - npm run build
 artifacts:
   files:
     - 'build/*'
