--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,11 +1,11 @@
 version: 0.1
-phases:
-  pre_build:
-    commands:
-      - npm install
-  build:
-    commands:
-      - npm run build
+# phases:
+#   pre_build:
+#     commands:
+#       - npm install
+#   build:
+#     commands:
+#       - npm run build
 artifacts:
   files:
-    - 'build*/**'
+    - '**/*'
