--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "pg-promise": "^8.6.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.3",
