Added Postgres, DynamoDB Session support

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-dynamodb": "^2.0.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "pg-promise": "^8.6.5",
     "sequelize": "^5.7.5"
   },
