--- a/package.json
+++ b/package.json
@@ -2,27 +2,31 @@
   "name": "blossom-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec babel-node src/server.js",
-    "build": "babel src/server.js --out-file build/server.js"
+    "build": "babel src/server.js --out-file build/server.js",
+    "build-webpack": "webpack --display-error-details"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-loader": "^8.0.5",
     "connect-dynamodb": "^2.0.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "pg-promise": "^8.6.5",
-    "sequelize": "^5.7.5"
+    "sequelize": "^5.7.5",
+    "webpack": "^4.30.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.3",
     "@babel/core": "^7.4.3",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.3",
-    "nodemon": "^1.18.11"
+    "nodemon": "^1.18.11",
+    "webpack-cli": "^3.3.1"
   }
 }
