--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec babel-node src/server.js",
-    "build": "babel src/server.js --out-file build/server.js",
+    "build": "babel src --out-dir build",
     "build-webpack": "webpack --display-error-details"
   },
   "author": "",
