--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "blossom-server",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/server.js",
+  "main": "./build/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node src/server.js",
-    "build": "babel src --out-dir build",
-    "build-webpack": "webpack --display-error-details"
+    "start": "JWT_SECRET=development HOST=http://localhost:3000 nodemon --exec babel-node src/server.js",
+    "build": "babel src --out-dir build"
   },
   "author": "",
   "license": "ISC",
@@ -17,16 +16,18 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
+    "express-validator": "^5.3.1",
+    "get-video-id": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.1.1",
     "pg-promise": "^8.6.5",
-    "sequelize": "^5.7.5",
-    "webpack": "^4.30.0"
+    "sequelize": "^5.7.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.3",
     "@babel/core": "^7.4.3",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.3",
-    "nodemon": "^1.18.11",
-    "webpack-cli": "^3.3.1"
+    "nodemon": "^1.18.11"
   }
 }
