--- a/.ebextensions/.config
+++ b/.ebextensions/.config
@@ -50,19 +50,19 @@ files:
     mode: "000400"
     owner: root
     group: root
-    source: 'https://s3.eu-central-1.amazonaws.com/elasticbeanstalk-eu-central-1-546569656867/ssl/`{"Ref": "AWSEBEnvironmentName" }`.crt'
+    source: 'https://s3.eu-central-1.amazonaws.com/elasticbeanstalk-eu-central-1-546569656867/ssl/server.crt'
     authentication: S3Access
       
   /etc/pki/tls/certs/server.key:
     mode: "000400"
     owner: root
     group: root
-    source: 'https://s3.eu-central-1.amazonaws.com/elasticbeanstalk-eu-central-1-546569656867/ssl/`{"Ref": "AWSEBEnvironmentName" }`.key'
+    source: 'https://s3.eu-central-1.amazonaws.com/elasticbeanstalk-eu-central-1-546569656867/ssl/server.key'
     authentication: S3Access
    
   /etc/pki/tls/certs/chain.pem:
     mode: "000400"
     owner: root
     group: root
-    source: 'https://s3.eu-central-1.amazonaws.com/elasticbeanstalk-eu-central-1-546569656867/ssl/`{"Ref": "AWSEBEnvironmentName" }`.pem'
+    source: 'https://s3.eu-central-1.amazonaws.com/elasticbeanstalk-eu-central-1-546569656867/ssl/chain.pem'
     authentication: S3Access
