add dotenv for config management removed build from checked in code

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
+# node
 node_modules/
+npm-debug.log
+
+# dotenv
+.env
+
+# code coverage reports
+coverage
+.nyc_output
+
+# Other file
+.DS_Store
+
+# build
+build/
+
