--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-loader": "^8.0.5",
+    "babel-loader": "^8.0.6",
     "connect-dynamodb": "^2.0.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
@@ -23,15 +23,14 @@
     "moment-duration-format": "^2.2.2",
     "node-fetch": "^2.6.0",
     "nodemailer": "^6.1.1",
-    "pg-promise": "^8.6.5",
-    "sequelize": "^5.7.5",
-    "youtube-api": "^2.0.10"
+    "pg-promise": "^8.7.2",
+    "sequelize": "^5.7.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.3",
-    "@babel/core": "^7.4.3",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
     "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-env": "^7.4.4",
     "nodemon": "^1.18.11",
     "standard": "^12.0.1"
   },
