--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-loader": "^8.0.5",
+    "babel-loader": "^8.0.6",
     "connect-dynamodb": "^2.0.3",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
-    "express": "^4.16.4",
+    "express": "^4.17.0",
     "express-session": "^1.16.1",
     "express-validator": "^5.3.1",
     "get-video-id": "^3.1.1",
@@ -24,17 +24,16 @@
     "moment": "^2.24.0",
     "moment-duration-format": "^2.2.2",
     "node-fetch": "^2.6.0",
-    "nodemailer": "^6.1.1",
-    "pg-promise": "^8.6.5",
-    "sequelize": "^5.7.5",
-    "youtube-api": "^2.0.10"
+    "nodemailer": "^6.2.1",
+    "pg-promise": "^8.7.2",
+    "sequelize": "^5.8.6"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.3",
-    "@babel/core": "^7.4.3",
-    "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.4.3",
-    "nodemon": "^1.18.11",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/node": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "nodemon": "^1.19.0",
     "standard": "^12.0.1"
   },
   "standard": {
