Fixed Mailing, cleaned up environment variables and added postgres as local session store

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,15 @@
 NODE_ENV=development
 
-RDS_DB_NAME=blossom-dev
-RDS_USERNAME=peter
-RDS_PASSWORD=
+JWT_SECRET=development
+COOKIE_SECRET=development
+
 RDS_HOSTNAME=localhost
 RDS_PORT=5432
+RDS_DB_NAME=
+RDS_USERNAME=
+RDS_PASSWORD=
 
-JWT_SECRET=development
+YOUTUBE_API_KEY=
 
 EMAIL_USER=
 EMAIL_PASSWORD=
@@ -15,10 +18,3 @@ EMAIL_PORT=
 
 HOST=http://localhost:3000
 HTTP_PORT=8081
-
-YOUTUBE_API_KEY=
-
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-
-COOKIE_SECRET=development
