--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "babel-loader": "^8.0.6",
     "connect-dynamodb": "^2.0.3",
+    "connect-pg-simple": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
@@ -25,6 +26,7 @@
     "moment-duration-format": "^2.2.2",
     "node-fetch": "^2.6.0",
     "nodemailer": "^6.2.1",
+    "pg": "^7.11.0",
     "pg-promise": "^8.7.2",
     "sequelize": "^5.8.6"
   },
