--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,11 @@
 {
     "presets": [
-      "@babel/preset-env"
+      [
+        "@babel/preset-env",
+        {
+          "useBuiltIns": "usage",
+          "targets": { "node": "current" }
+        }
+      ]
     ]
   }
