--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "@uppy/companion": "^1.2.0",
     "babel-loader": "^8.0.6",
     "connect-dynamodb": "^2.0.3",
     "connect-pg-simple": "^5.0.0",
