--- a/package.json
+++ b/package.json
@@ -13,31 +13,32 @@
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
-    "@uppy/companion": "^1.2.0",
+    "@uppy/companion": "^1.3.0",
+    "aws-sdk": "^2.496.0",
     "babel-loader": "^8.0.6",
     "connect-dynamodb": "^2.0.3",
     "connect-pg-simple": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
-    "express": "^4.17.0",
-    "express-session": "^1.16.1",
+    "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "express-validator": "^5.3.1",
-    "get-video-id": "^3.1.1",
+    "get-video-id": "^3.1.4",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
-    "moment-duration-format": "^2.2.2",
+    "moment-duration-format": "^2.3.2",
     "node-fetch": "^2.6.0",
-    "nodemailer": "^6.2.1",
+    "nodemailer": "^6.3.0",
     "pg": "^7.11.0",
-    "pg-promise": "^8.7.2",
-    "sequelize": "^5.8.6"
+    "pg-promise": "^8.7.5",
+    "sequelize": "^5.10.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/node": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "nodemon": "^1.19.0",
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/node": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "nodemon": "^1.19.1",
     "standard": "^12.0.1"
   },
   "standard": {
