--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,16 @@ EMAIL_PORT=
 
 HOST=http://localhost:3000
 HTTP_PORT=8081
+
+ROLE=admin
+
+IDSEED=12345
+
+COMPANION_AWS_KEY=
+COMPANION_AWS_SECRET=
+COMPANION_AWS_BUCKET=
+COMPANION_AWS_REGION=
+COMPANION_SECRET=thisisasecret
+COMPANION_UPLOAD_FOLDER=
+
+
