--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "standard",
     "test": "npm run lint",
     "start": "nodemon --exec babel-node src/server.js",
+    "serve": "node server.js",
     "build": "babel src --out-dir build"
   },
   "author": "",
