--- a/package.json
+++ b/package.json
@@ -24,16 +24,19 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "express-validator": "^6.2.0",
+    "filereader": "^0.10.3",
     "get-video-id": "^3.1.4",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
+    "multer": "^1.4.2",
     "node-fetch": "^2.6.0",
     "nodemailer": "^6.3.0",
     "pg": "^7.12.1",
     "pg-promise": "^9.2.1",
     "sequelize": "^5.19.0",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "vimeo": "^2.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.0",
