--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-loader": "^8.0.6",
     "connect-dynamodb": "^2.0.3",
     "connect-pg-simple": "^6.0.1",
+    "connect-redis": "^4.0.3",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
@@ -34,6 +35,7 @@
     "nodemailer": "^6.3.0",
     "pg": "^7.12.1",
     "pg-promise": "^9.2.1",
+    "redis": "^2.8.0",
     "sequelize": "^5.19.0",
     "shortid": "^2.2.15",
     "vimeo": "^2.1.1"
