--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
     "express-session": "^1.16.2",
     "express-validator": "^6.2.0",
     "filereader": "^0.10.3",
